# MediaServer

./: .gitignore  CMakeLists.txt  license.md  readme.md
.github/workflows/: cmake-ubuntu.yml  cmake-windows.yml
src/: Config.cpp  Config.hpp  Database.cpp  Database.hpp  Main.cpp  main.cpp
src/Database/: Database.cpp  Database.hpp  DatabaseControl.cpp  DatabaseControl.hpp
src/Database/Queries/: Initialization.sql
src/GUI/: Console.cpp  Console.hpp
tests/: CMakeLists.txt  ConfigTests.cpp  test1.cpp
